5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1596_842.log
== TEST (2019-03-22 20:52:37) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//100
print(y)
-- OUTPUT:
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:53:12) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
print(y)
-- OUTPUT:
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:53:58) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
print(y)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:54:26) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x%100
print(y)
print(z)
-- OUTPUT:
3
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:54:52) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x//1000
print(y)
print(z)
-- OUTPUT:
3
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:55:29) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x//1000
q=x%1000
print(y)
print(z)
print(q)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(v)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:58:48) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x//1000
q=x//100
v=q//10
print(y)
print(z)
print(q)
print(v)
-- OUTPUT:
3
9
91
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:59:30) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x//1000
q=x%1000
v=q//10
print(y)
print(z)
print(q)
print(v)
-- OUTPUT:
3
9
173
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:59:43) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%10
z=x//1000
q=x%1000
v=q//10
print(y)
print(z)
print(q)
print(v)
-- OUTPUT:
3
9
173
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:00:47) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//1000
print(y)

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:01:18) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//1000
c=x%1000
print(y)
print(c)

-- OUTPUT:
9
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:01:43) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//1000
c=x%100
print(y)
print(c)

-- OUTPUT:
9
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:02:41) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//1000
c=x%100
print(y)
print(c)

-- OUTPUT:
9
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:16:59) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
print(y)
print(c)

-- OUTPUT:
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:17:27) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x%100
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:17:40) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x//100
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:17:56) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x%1000
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:18:06) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x%100
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:18:16) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x//100
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:20:16) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x//100
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
91
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:20:27) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x%1
c=x%10
q=x//10
print(y)
print(c)
print(q)

-- OUTPUT:
0
3
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:21:09) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=x//100
p=x%100
print(y)
print(c)
print(q)
print(p)

-- OUTPUT:
917
3
91
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:21:53) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y//10
p=y%10
print(y)
print(c)
print(q)
print(p)

-- OUTPUT:
917
3
91
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:22:21) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=q%10
print(y)
print(c)
print(q)
print(p)

-- OUTPUT:
917
3
7
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:22:41) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=q%100
print(y)
print(c)
print(q)
print(p)

-- OUTPUT:
917
3
7
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:23:15) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
print(y)
print(c)
print(q)
print(p)

-- OUTPUT:
917
3
7
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:24:43) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
print(y)
print(c)
print(q)
print(p)
print(h)

-- OUTPUT:
917
3
7
17
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:25:19) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
print(y)
print(c)
print(q)
print(p)
print(h)
print(t)

-- OUTPUT:
917
3
7
17
1
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:25:54) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
n=c+q+h+t
print(n)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:26:09) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
n=c+q+h+t
print(n)

-- EXECUTION TIME:
0.237231
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:36) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
n=c+q+h+t
print(n)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:50) 
-- CODE:
x=int(input("Digite um numero inteiro de 4 digito: "))
y=x//10
c=x%10
q=y%10
p=y%100
h=p//10
t=y//100
n=c+q+h+t
print(n)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
